fix: allineamento BE - AI config, SecurityConfig, CORS, README, pulizia servizi duplicati